--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <version>${springboot.docker-compose.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
