Add spring boot security and oauth2 dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
             <artifactId>spring-boot-docker-compose</artifactId>
             <version>${springboot.docker-compose.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${springboot.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.commons</groupId>
