--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     username: postgres
     password: root
     url: jdbc:postgresql://172.19.0.2:5432/user_management_application_db
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,6 +14,27 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         show_sql: true
+
   sql:
     init:
       mode: always
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://127.19.0.3:9000
+      client:
+        registration:
+          springauth:
+            client-id: messaging-client
+            client-secret: secret
+            scope:
+              - message.read
+              - message.write
+            authorization-grant-type: client_credentials
+            provider: springauth
+        provider:
+          springauth:
+            authorization-uri: http://localhost:9000/auth2/authorize
+            token-uri: http://localhost:9000/oauth2/token
