--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: postgres
     password: root
-    url: jdbc:postgresql://172.19.0.2:5432/user_management_application_db
+    url: jdbc:postgresql://localhost:5432/user_management_application_db
 
   jpa:
     hibernate:
@@ -18,23 +18,3 @@ spring:
   sql:
     init:
       mode: always
-
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://127.19.0.3:9000
-      client:
-        registration:
-          springauth:
-            client-id: messaging-client
-            client-secret: secret
-            scope:
-              - message.read
-              - message.write
-            authorization-grant-type: client_credentials
-            provider: springauth
-        provider:
-          springauth:
-            authorization-uri: http://localhost:9000/auth2/authorize
-            token-uri: http://localhost:9000/oauth2/token
