setting: add settings for liquibase

--- a/TeamSphere-backend/src/main/resources/application.yml
+++ b/TeamSphere-backend/src/main/resources/application.yml
@@ -8,12 +8,18 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         show_sql: true
+
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/db.changelog-master.yml
+    da
+
 
   sql:
     init:
