--- a/TeamSphere-backend/pom.xml
+++ b/TeamSphere-backend/pom.xml
@@ -25,6 +25,7 @@
         <springboot.security.version>3.4.3</springboot.security.version>
         <springdoc.version>2.8.4</springdoc.version>
         <jwt.version>0.11.5</jwt.version>
+        <liquibase.version>4.31.1</liquibase.version>
     </properties>
     <dependencies>
         <dependency>
@@ -73,6 +74,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase.ext</groupId>
+            <artifactId>liquibase-hibernate6</artifactId>
+            <version>${liquibase.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
@@ -104,20 +117,7 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>${mapstruct.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -138,7 +138,36 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibase.version}</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>diff</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <changeLogFile>classpath:/db/changelog/db.changelog-master.yml</changeLogFile>
+                    <url>jdbc:postgresql://localhost:5432/team_sphere_db</url>
+                    <username>postgres</username>
+                    <password>root</password>
+                    <driver>org.postgresql.Driver</driver>
+
+                    <referenceUrl>jdbc:postgresql://localhost:5432/team_sphere_db</referenceUrl>
+                    <referenceUsername>postgres</referenceUsername>
+                    <referencePassword>root</referencePassword>
+                    <referenceDriver>org.postgresql.Driver</referenceDriver>
+
+                    <outputChangeLogFile>target/db/changelog/generated-changelog.yml</outputChangeLogFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 
 </project>
