--- a/TeamSphere-backend/pom.xml
+++ b/TeamSphere-backend/pom.xml
@@ -25,6 +25,7 @@
         <springboot.security.version>3.4.2</springboot.security.version>
         <springdoc.version>2.8.4</springdoc.version>
         <jwt.version>0.11.5</jwt.version>
+        <flyway.version>11.3.4</flyway.version>
     </properties>
     <dependencies>
         <dependency>
@@ -72,6 +73,12 @@
             <version>${jwt.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
