--- a/TeamSphere-backend/src/main/resources/application.yml
+++ b/TeamSphere-backend/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
         format_sql: true
         show_sql: true
 
-#  sql:
-#    init:
-#      mode: always
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    user: postgres
+    password: root
+    baseline-description: "init"
+    baseline-version: 1
+
+  sql:
+    init:
+      mode: always
