--- a/TeamSphere-backend/src/main/resources/application.yml
+++ b/TeamSphere-backend/src/main/resources/application.yml
@@ -8,20 +8,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         show_sql: true
-
-  flyway:
-    baseline-on-migrate: true
-    enabled: true
-    user: postgres
-    password: root
-    baseline-description: "init"
-    baseline-version: 1
 
   sql:
     init:
