refactor: fixed db naming and configs

--- a/TeamSphere-backend/Dockerfile
+++ b/TeamSphere-backend/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY target/user-management-api-1.jar app.jar
+COPY target/team-sphere-1.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
