--- a/TeamSphere-frontend/package.json
+++ b/TeamSphere-frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@types/node": "^22.13.9",
     "axios": "^1.8.1",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
