fix: fixed maven plugin issue

--- a/TeamSphere-backend/pom.xml
+++ b/TeamSphere-backend/pom.xml
@@ -19,10 +19,10 @@
     <properties>
         <java.version>21</java.version>
         <lombok.version>1.18.36</lombok.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
         <springboot.version>3.4.2</springboot.version>
         <springboot.security.version>3.4.2</springboot.security.version>
+        <springboot.maven.plugin.version>3.3.1</springboot.maven.plugin.version>
         <springdoc.version>2.8.4</springdoc.version>
         <jwt.version>0.11.5</jwt.version>
     </properties>
@@ -90,6 +90,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${springboot.maven.plugin.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>
